# routes/index.js
@@ -4,6 +4,7 @@ const tourCategoryRouter = require('./tourCategory');
 const bookingRouter = require('./booking');
 const tripRouter = require('./trip');
 const destiRouter = require('./destination');
+const blog = require('./blog');
 const {notFound, errHandler} = require('../middlewares/errHandler')
 
 const initRoutes = (app) => {
@@ -13,6 +14,7 @@ const initRoutes = (app) => {
     app.use('/api/booking', bookingRouter);
     app.use('/api/trip', tripRouter);
     app.use('/api/destination', destiRouter);
+    app.use('/api/blog', blog);
 
 
     app.use(notFound);
